added the live js

--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Heoooo world</h1>
-    <video src="assets/vid_1.mp4"></video>
-    <video src="assets/vid_2.mp4"></video>
-    <video src="assets/vid_3.mp4"></video>
-    <video src="assets/vid_4.mp4"></video>
-    <video src="assets/vid_5.mp4"></video>
+    <div class="content"></div>
+    <script src="live/app.js"></script>
 </body>
 </html>
