replaced the attribute.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="content"></div>
+    <div data-module-name="rbgemc-rb3/custom-scripts-panel/custom-scripts-panel-controller" class="content"></div>
     <script src="live/app.js"></script>
 </body>
 </html>
