--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div data-module-name="rbgemc-rb3/custom-scripts-panel/custom-scripts-panel-controller" class="content"></div>
-    <script src="live/app.js"></script>
+    <script src="external.js"></script>
 </body>
 </html>
